# rustified

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: reqres1.rs  reqres2.rs
rustified_derive/: Cargo.toml  README.md
rustified_derive/src/: lib.rs  params.rs  parse.rs
src/: client.rs  endpoint.rs  http.rs  lib.rs
src/blocking/: client.rs
src/blocking/clients/: reqwest.rs
src/clients/: reqwest.rs
tests/: common.rs  endpoint.rs  macro.rs
tests/macro/: empty_attr.rs  empty_attr.stderr  invalid_data.rs  invalid_data.stderr  invalid_method.rs  invalid_method.stderr  invalid_result.rs  invalid_result.stderr  invalid_type.rs  invalid_type.stderr  no_attr.rs  no_attr.stderr  no_path.rs  no_path.stderr
